--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
                     <h2>Hydro Pressure Booster System</h2>
                 </div>
                 <div class="elem"
-                    data-image="">
+                    data-image="solar water heater.jpg">
                     <div class="overlay"></div>
                     <h2>Solar Water Heater</h2>
                 </div>
                 <div class="elem"
-                    data-image="">
+                    data-image="RO System.jpg">
                     <div class="overlay"></div>
                     <h2>RO System</h2>
                 </div>
